packages/ak-editor-bitbucket/src/shadow.less
@import '~ak-editor-shared-styles/src/index';

.root {
  display: block;
  position: relative;
  background: white;

  [contenteditable] {
    outline: none;
    white-space: pre-wrap;

    blockquote {
      padding-left: 1em;
      border-left: 3px solid @ak-color-N40;
      margin-left: 0;
      margin-right: 0;
    }

    code {
      font-family: @ak-editor-code-font-family;
      background: @ak-editor-code-background;
      padding: @ak-editor-code-inline-padding;
      border-radius: @ak-border-radius;
    }

    pre {
      font-family: @ak-editor-code-font-family;
      background: @ak-editor-code-background;
      padding: @ak-editor-code-block-padding;
      border-radius: @ak-border-radius;
    }
  }
}

.fake-input {
  width: 100%;
  display: block;
  height: 50px;
  padding-left: 20px;
  box-sizing: border-box;

  &.comment {
    height: 30px;
  }
  &::placeholder {
    font-size: 14px;
    padding: 20px;
    color: black;
    padding-left: 0;
  }
}

.content {
  cursor: text;
}

.focused {
  box-shadow: 0 0 0 2px @ak-editor-focus;
  border-radius: @ak-border-radius;
}

:global(.ProseMirror-drop-target) {
  display: none;
}

.toolbar {
  color: @ak-editor-inactive-foreground;
}

